@@ -452,8 +452,10 @@
 - Added Incendia Agave to the loot table of Scalding Elemental for the quest Sacred Fire.
 - Added Incendia Agave to the loot table of Boiling Elemental for the quest Sacred Fire.
 - Updated the flags of Incendia Agave to allow every member of a group to loot it.
+- Added Rocket Car Parts to the loot table of Scorpid Terror for the quest Rocket Car Parts.
 - Added Rocket Car Parts to the loot table of Scorpid Reaver for the quest Rocket Car Parts.
 - Added Rocket Car Parts to the loot table of Sparkleshell Tortoise for the quest Rocket Car Parts.
+- Added Rocket Car Parts to the loot table of Sparkleshell Snapper for the quest Rocket Car Parts.
 - Added Rocket Car Parts to the loot table of Sparkleshell Borer for the quest Rocket Car Parts.
 - Added Rocket Car Parts to the loot table of Saltstone Basilisk for the quest Rocket Car Parts.
 - Added Rocket Car Parts to the loot table of Saltstone Gazer for the quest Rocket Car Parts.
